# custom-flask-auth

./: .gitignore  app.py  config.py  pyproject.toml  requirements.txt
controllers/auth/: routes.py
custom_flask_auth/: __init__.py  auth.py
custom_flask_auth/auth/: __init__.py  routes.py
custom_flask_auth/forms/: __init__.py  auth.py
custom_flask_auth/models/: __init__.py  user.py
custom_flask_auth/static/admin_dashboard/assets/css/: admin-dashboard.css
custom_flask_auth/templates/: 404.html
custom_flask_auth/templates/auth/: base.html  forgot-password.html  login.html  password_reset_email.html  register.html  reset-password.html
custom_flask_auth/utils/: decorators.py  email_utils.py  encryption.py
forms/: __init__.py  auth.py
models/: __init__.py  user.py
static/admin dashboard static/assets/css/: font.css  main.css
templates/: flash-messages.html
templates/auth/: base.html  forgot-password.html  login.html  password_reset_email.html  register.html  reset-password.html
templates/email/: admin_email.html  password_reset_email.html  user_aknowledgement_email.html
utils/: decorators.py  validators.py
